apps/prairielearn/elements/pl-file-upload/pl-file-upload.css
.pl-file-upload-container .upload-dropzone {
  min-height: 15ex;
  background-color: #fafdff;
  border: 2px dashed #0087f7;
  cursor: pointer;
}
.pl-file-upload-container .upload-dropzone.dz-drag-hover {
  background-color: #d9edf7;
  border-style: solid;
}

.pl-file-upload-container .file-status-icon {
  margin-right: 10px;
  transition: all 400ms;
}

.pl-file-upload-container .file-status {
  margin-bottom: 0px;
  font-size: 0.8em;
  color: #999;
}

.pl-file-upload-container .file-preview-button::before {
  content: 'Show preview';
}

.pl-file-upload-container .file-preview-button:not(.collapsed)::before {
  content: 'Hide preview';
}

.pl-file-upload-container .file-preview-icon {
  margin-left: 10px;
  transition: transform 400ms;
}

.pl-file-upload-container .file-preview-button:not(.collapsed) .file-preview-icon {
  transform: rotateX(180deg);
}

.pl-file-upload-container .file-preview pre {
  max-height: 200px;
}

